@@ -5,6 +5,8 @@ Changelog
 1.3.4 (unreleased)
 ------------------
 
+- Fix search position on mobile devices after scrolling. [mathias.leimgruber]
+
 - No longer open overlay on mobile devices (phone). [mathias.leimgruber]
 
 - Remove superfluous margin of textblock. [mbaechtold]
